Updated page Workbench creation/fr

--- a/wiki/fr/Workbench_creation.html
+++ b/wiki/fr/Workbench_creation.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Workbench creation/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Workbench+creation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Erstellung von Arbeitsbereichen (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Erstellung von Arbeitsbereichen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Workbench_creation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Workbench creation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/es (2% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Creare un Ambiente di lavoro (83% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Tworzenie &#347;rodowiska pracy (98% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Tworzenie &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -391,11 +391,9 @@ Un autre paragraphe a &eacute;t&eacute; cr&eacute;&eacute; pour d&eacute;crire l
 </p><p><span id="Related"></span>
 </p>
 <h2><span class="mw-headline" id="En_relation">En relation</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li><a href="../fr/Translating_an_external_workbench.html" title="Translating an external workbench/fr">Traduction et ateliers externes</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Discussion sur le forum&nbsp;: Namespaced Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
-</div>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Mod&egrave;le d'extension</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -425,35 +423,35 @@ Un autre paragraphe a &eacute;t&eacute; cr&eacute;&eacute; pour d&eacute;crire l
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121163059
+Cached time: 20260122113234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.150 seconds
-Preprocessor visited node count: 475/1000000
+CPU time usage: 0.097 seconds
+Real time usage: 0.148 seconds
+Preprocessor visited node count: 474/1000000
 Post&#8208;expand include size: 10922/2097152 bytes
 Template argument size: 13337/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32822/5000000 bytes
+Unstrip post&#8208;expand size: 32836/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.969      1 -total
- 31.99%   11.505     12 Template:Code
- 16.54%    5.948      1 Template:Powerdocnavi/fr
-  8.63%    3.104      1 Template:Navigation_menu_2
-  7.87%    2.830      1 Template:VersionPlus/fr
-  7.36%    2.648      1 Template:VeryImportantMessage
-  6.76%    2.432      1 Template:VersionMinus/fr
-  6.73%    2.422      2 Template:Docnav/fr
-  4.81%    1.730     10 Template:Incode
-  3.36%    1.207      5 Template:FileName
+100.00%   29.745      1 -total
+ 20.87%    6.208      1 Template:Powerdocnavi/fr
+ 19.21%    5.713     12 Template:Code
+  9.61%    2.858      1 Template:Navigation_menu_2
+  8.26%    2.458      1 Template:TOCright
+  7.74%    2.303      2 Template:Docnav/fr
+  6.90%    2.052      1 Template:VeryImportantMessage
+  6.81%    2.026      1 Template:MenuCommand
+  6.60%    1.962      1 Template:VersionPlus/fr
+  5.83%    1.733      5 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69748-0!canonical and timestamp 20260121163059 and revision id 1741963. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69748-0!canonical and timestamp 20260122113233 and revision id 1742339. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
