Created page with "*ver 0.15 2025/01/04 elimina tutti i riferimenti a PySide e QtWidgets, chrono di chrisb"

--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -376,9 +376,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 </p><p><span id="Revision"></span>
 </p>
 <h2><span class="mw-headline" id="Revisioni">Revisioni</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>ver 0.15 2025/01/04 delete all references to PySide and QtWidgets, chrono by chrisb</li></ul>
-</div>
+<ul><li>ver 0.15 2025/01/04 elimina tutti i riferimenti a PySide e QtWidgets, chrono di chrisb</li></ul>
 <ul><li>Ver 0.14c&nbsp;: 15-01-2021 include <b>Gui.SendMsgToActiveView("ViewFit")</b></li></ul>
 <ul><li>Ver 0.14b&nbsp;: 15-01-2021 Create Tab Coordinate and Tab Stretching for diminish the height of the macro and accepted in 15" screen</li></ul>
 <div class="mw-translate-fuzzy">
@@ -409,13 +407,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122105850
+Cached time: 20260122122105
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.340 seconds
-Preprocessor visited node count: 732/1000000
+CPU time usage: 0.160 seconds
+Real time usage: 0.220 seconds
+Preprocessor visited node count: 731/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
@@ -425,19 +423,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  152.367      1 -total
-  2.70%    4.114      9 Template:CheckBox
-  2.30%    3.509      1 Template:Code
-  2.22%    3.382      9 Template:SpinBox
-  2.11%    3.213      6 Template:RadioButton
-  2.05%    3.119      1 Template:Macro/it
-  1.53%    2.329      1 Template:Codeextralink
-  1.39%    2.115      1 Template:TRUE
-  1.08%    1.649      1 Template:Caption
-  1.01%    1.544      3 Template:Button
+100.00%  102.685      1 -total
+  2.98%    3.064      1 Template:Macro/it
+  2.91%    2.983      9 Template:CheckBox
+  2.85%    2.928      6 Template:RadioButton
+  2.77%    2.847      1 Template:Code
+  2.46%    2.530      9 Template:SpinBox
+  2.37%    2.432      3 Template:Button
+  1.70%    1.743      1 Template:Codeextralink
+  1.65%    1.696      1 Template:Caption
+  1.42%    1.459      1 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105849 and revision id 1742286. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122122104 and revision id 1742341. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
