--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -187,9 +187,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Y<span></span></span>&nbsp;: Inverte le coordinate <b>Y</b> dell'immagine.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Z<span></span></span>&nbsp;: Inverte le coordinate <b>Z</b> dell'immagine.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="8_bit_Mode">8 bit Mode</span></h4>
-</div>
+<p><span id="8_bit_Mode"></span>
+</p>
+<h4><span id="Modalit.C3.A0_a_8_bit"></span><span class="mw-headline" id="Modalit&agrave;_a_8_bit">Modalit&agrave; a 8 bit</span></h4>
 <p>Il valore iniziale dell'operazione si adegua automaticamente alla funzione selezionata: 0 se l'impostazione &egrave; su Nero (Black), oppure 255 o 20 se l'impostazione &egrave; Bianco (White)
 </p>
 <div class="mw-translate-fuzzy">
@@ -404,11 +404,11 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122122215
+Cached time: 20260122122226
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.194 seconds
+CPU time usage: 0.178 seconds
 Real time usage: 0.245 seconds
 Preprocessor visited node count: 727/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
@@ -420,19 +420,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  113.132      1 -total
-  5.68%    6.423      1 Template:Codeextralink
-  4.20%    4.753      9 Template:CheckBox
-  4.09%    4.630      1 Template:Macro/it
-  3.53%    3.997      6 Template:RadioButton
-  3.52%    3.987      9 Template:SpinBox
-  2.38%    2.691      1 Template:Code
-  2.11%    2.382      3 Template:Button
-  1.95%    2.211      1 Template:TRUE
-  1.74%    1.969      1 Template:Caption
+100.00%   98.584      1 -total
+  4.08%    4.019      1 Template:Macro/it
+  2.97%    2.932      9 Template:CheckBox
+  2.89%    2.851      1 Template:Codeextralink
+  2.85%    2.807      9 Template:SpinBox
+  2.85%    2.806      1 Template:Code
+  2.71%    2.669      6 Template:RadioButton
+  1.88%    1.857      3 Template:Button
+  1.83%    1.804      1 Template:Caption
+  1.54%    1.522      1 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122122214 and revision id 1742345. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122122226 and revision id 1742347. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
