Created page with "====Modalità a 32 bit===="

--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -199,9 +199,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <span typeof="mw:File"><a href="../index.php?title=Draft_Point.svg&amp;filetimestamp=20210319102426&amp;.html" class="mw-file-description"><img src="../File/Draft_Point.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Point<span></span></span>&nbsp;: Crea un punto per ogni pixel (vettoriale). (La procedura pu&ograve; essere lunga)</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Nuance<span></span></span>&nbsp;: Se Nuance &egrave; attivato i colori dei punti sono restituiti come se fosse una foto.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="32_bit_Mode">32 bit Mode</span></h4>
-</div>
+<p><span id="32_bit_Mode"></span>
+</p>
+<h4><span id="Modalit.C3.A0_a_32_bit"></span><span class="mw-headline" id="Modalit&agrave;_a_32_bit">Modalit&agrave; a 32 bit</span></h4>
 <div class="mw-translate-fuzzy">
 <h4><span class="mw-headline" id="Mode_32_Bits">Mode 32 Bits</span></h4>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Photo<span></span></span>&nbsp;: Il modo Photo &egrave; attivato automaticamente quando viene rilevata una immagine di <b>32 bit</b>. (La procedura pu&ograve; essere lunga)</li>
@@ -404,12 +404,12 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122122226
+Cached time: 20260122123004
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.178 seconds
-Real time usage: 0.245 seconds
+CPU time usage: 0.187 seconds
+Real time usage: 0.273 seconds
 Preprocessor visited node count: 727/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
@@ -420,19 +420,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   98.584      1 -total
-  4.08%    4.019      1 Template:Macro/it
-  2.97%    2.932      9 Template:CheckBox
-  2.89%    2.851      1 Template:Codeextralink
-  2.85%    2.807      9 Template:SpinBox
-  2.85%    2.806      1 Template:Code
-  2.71%    2.669      6 Template:RadioButton
-  1.88%    1.857      3 Template:Button
-  1.83%    1.804      1 Template:Caption
-  1.54%    1.522      1 Template:TRUE
+100.00%  125.402      1 -total
+  4.02%    5.044      9 Template:SpinBox
+  3.86%    4.838      1 Template:Macro/it
+  3.20%    4.012      9 Template:CheckBox
+  3.05%    3.828      6 Template:RadioButton
+  2.54%    3.186      1 Template:Codeextralink
+  2.32%    2.912      3 Template:Button
+  2.03%    2.550      1 Template:TRUE
+  1.82%    2.282      1 Template:Caption
+  1.58%    1.983      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122122226 and revision id 1742347. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123004 and revision id 1742349. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
