--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -202,11 +202,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <p><span id="32_bit_Mode"></span>
 </p>
 <h4><span id="Modalit.C3.A0_a_32_bit"></span><span class="mw-headline" id="Modalit&agrave;_a_32_bit">Modalit&agrave; a 32 bit</span></h4>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Mode_32_Bits">Mode 32 Bits</span></h4>
-<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Photo<span></span></span>&nbsp;: Il modo Photo &egrave; attivato automaticamente quando viene rilevata una immagine di <b>32 bit</b>. (La procedura pu&ograve; essere lunga)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Plan<span></span></span>&nbsp;: Il modo Plan consente di importare una immagine di <b>32 bit</b> e ignorare lo sfondo del piano. Il colore predefinito dello sfondo del piano &egrave; il nero,  per ignorare pi&ugrave; colori regolare il <b>Capping</b>. Se &egrave; selezionato il bianco, ignora il bianco e lascia passare tutti gli altri colori. (La procedura pu&ograve; essere lunga)</li></ul>
-</div>
+<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Photo<span></span></span>: la modalit&agrave; foto si attiva automaticamente quando viene rilevata un<b>immagine a 32 bit</b>. (Nota: questa procedura richiede un uso intensivo della CPU)</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Plan<span></span></span>: consente di importare un<b>immagine a 32 bit</b> e ignorare lo sfondo del piano. Per impostazione predefinita, lo sfondo della mappa &egrave; nero; i colori ignorati sono regolabili con il comando <b>Capping</b>. Se si seleziona Bianco, la parte inferiore della mappa sar&agrave; bianca. (Nota: questa procedura richiede un uso intensivo della CPU)</li></ul>
 <h4><span class="mw-headline" id="File">File</span></h4>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> .pcd<span></span></span>: se selezionato, un file (originalName.bmp.pcd) viene salvato nella stessa cartella del file (pcd v0.7).</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> .asc<span></span></span>: se selezionato, un file (originalName.bmp.asc) viene salvato nella stessa cartella del file. Questo file pu&ograve; essere utilizzato come nuvola di punti (formato: X Y Z).</li></ul>
@@ -404,13 +401,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122123004
+Cached time: 20260122123124
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.187 seconds
-Real time usage: 0.273 seconds
-Preprocessor visited node count: 727/1000000
+CPU time usage: 0.158 seconds
+Real time usage: 0.188 seconds
+Preprocessor visited node count: 723/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
@@ -420,19 +417,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  125.402      1 -total
-  4.02%    5.044      9 Template:SpinBox
-  3.86%    4.838      1 Template:Macro/it
-  3.20%    4.012      9 Template:CheckBox
-  3.05%    3.828      6 Template:RadioButton
-  2.54%    3.186      1 Template:Codeextralink
-  2.32%    2.912      3 Template:Button
-  2.03%    2.550      1 Template:TRUE
-  1.82%    2.282      1 Template:Caption
-  1.58%    1.983      1 Template:Code
+100.00%   81.961      1 -total
+  4.03%    3.299      9 Template:CheckBox
+  2.91%    2.383      1 Template:Code
+  2.81%    2.303      9 Template:SpinBox
+  2.66%    2.177      1 Template:Macro/it
+  2.35%    1.926      6 Template:RadioButton
+  2.28%    1.866      1 Template:Codeextralink
+  1.78%    1.459      1 Template:FALSE
+  1.74%    1.430      3 Template:Button
+  1.62%    1.328      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123004 and revision id 1742349. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123124 and revision id 1742351. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
