--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -154,9 +154,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 </div>
 <p><span id="Interface"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h3><span id="L.27interfaccia"></span><span class="mw-headline" id="L'interfaccia">L'interfaccia</span></h3>
-</div>
+<h3><span class="mw-headline" id="Interfaccia">Interfaccia</span></h3>
 <div class="mw-translate-fuzzy">
 <figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Texture_002.png&amp;filetimestamp=20210115193508&amp;.html" class="mw-file-description" title="Texture 002"><img alt="Texture 002" src="../File/Texture_002.png" decoding="async" width="300" height="583" class="mw-file-element" data-file-width="327" data-file-height="635"></a><figcaption>Texture 002</figcaption></figure>
 </div>
@@ -401,13 +399,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122123218
+Cached time: 20260122123236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.194 seconds
-Real time usage: 0.278 seconds
-Preprocessor visited node count: 723/1000000
+CPU time usage: 0.186 seconds
+Real time usage: 0.228 seconds
+Preprocessor visited node count: 722/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
@@ -417,19 +415,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  119.827      1 -total
-  3.64%    4.358      9 Template:CheckBox
-  3.13%    3.755      6 Template:RadioButton
-  2.65%    3.176      1 Template:Code
-  2.58%    3.091      1 Template:Macro/it
-  2.57%    3.074      9 Template:SpinBox
-  2.23%    2.678      1 Template:Codeextralink
-  1.90%    2.276      3 Template:Button
-  1.75%    2.097      1 Template:TRUE
-  1.68%    2.019      1 Template:FALSE
+100.00%  100.873      1 -total
+  4.50%    4.544      1 Template:Macro/it
+  3.72%    3.752      9 Template:CheckBox
+  3.69%    3.720      6 Template:RadioButton
+  3.55%    3.585      1 Template:Code
+  3.20%    3.224      9 Template:SpinBox
+  2.81%    2.837      1 Template:Codeextralink
+  2.75%    2.773      3 Template:Button
+  1.99%    2.003      1 Template:TRUE
+  1.51%    1.523      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123218 and revision id 1742353. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123236 and revision id 1742355. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
