Updated page Macro Texture/it

--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -155,9 +155,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <p><span id="Interface"></span>
 </p>
 <h3><span class="mw-headline" id="Interfaccia">Interfaccia</span></h3>
-<div class="mw-translate-fuzzy">
-<figure class="mw-halign-left" typeof="mw:File"><a href="../index.php?title=Texture_002.png&amp;filetimestamp=20210115193508&amp;.html" class="mw-file-description" title="Texture 002"><img alt="Texture 002" src="../File/Texture_002.png" decoding="async" width="300" height="583" class="mw-file-element" data-file-width="327" data-file-height="635"></a><figcaption>Texture 002</figcaption></figure>
-</div>
+<figure class="mw-halign-none" typeof="mw:File"><a href="../index.php?title=Texture_002.png&amp;filetimestamp=20210115193508&amp;.html" class="mw-file-description" title="Texture 002"><img alt="Texture 002" src="../File/Texture_002.png" decoding="async" width="300" height="583" class="mw-file-element" data-file-width="327" data-file-height="635"></a><figcaption>Texture 002</figcaption></figure>
 <p><span id="Coordinates"></span>
 </p>
 <h4><span class="mw-headline" id="Coordinate">Coordinate</span></h4>
@@ -399,13 +397,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122123236
+Cached time: 20260122123246
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.186 seconds
-Real time usage: 0.228 seconds
-Preprocessor visited node count: 722/1000000
+CPU time usage: 0.158 seconds
+Real time usage: 0.196 seconds
+Preprocessor visited node count: 721/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
@@ -415,19 +413,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  100.873      1 -total
-  4.50%    4.544      1 Template:Macro/it
-  3.72%    3.752      9 Template:CheckBox
-  3.69%    3.720      6 Template:RadioButton
-  3.55%    3.585      1 Template:Code
-  3.20%    3.224      9 Template:SpinBox
-  2.81%    2.837      1 Template:Codeextralink
-  2.75%    2.773      3 Template:Button
-  1.99%    2.003      1 Template:TRUE
-  1.51%    1.523      1 Template:FALSE
+100.00%   92.875      1 -total
+  4.31%    4.003      1 Template:Code
+  4.02%    3.731      1 Template:Macro/it
+  3.83%    3.559      9 Template:CheckBox
+  3.34%    3.102      6 Template:RadioButton
+  3.02%    2.806      9 Template:SpinBox
+  2.97%    2.758      3 Template:Button
+  2.77%    2.572      1 Template:Codeextralink
+  2.12%    1.967      1 Template:TRUE
+  1.81%    1.681      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123236 and revision id 1742355. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123246 and revision id 1742357. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
