Created page with "====Deformazione===="

--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -165,9 +165,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <li>Coordinate Y: <span typeof="mw:File"><a href="../index.php?title=Std_CoordinateSystem.svg&amp;filetimestamp=20240704195435&amp;.html" class="mw-file-description"><img src="../File/Std_CoordinateSystem.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,00 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Coordinata Y della posizione dell'oggetto, di default&nbsp;: 0.</li>
 <li>Coordinate Z: <span typeof="mw:File"><a href="../index.php?title=Std_CoordinateSystem.svg&amp;filetimestamp=20240704195435&amp;.html" class="mw-file-description"><img src="../File/Std_CoordinateSystem.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,00 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Coordinata Z della posizione dell'oggetto, di default&nbsp;: 0.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Stretching">Stretching</span></h4>
-</div>
+<p><span id="Stretching"></span>
+</p>
+<h4><span class="mw-headline" id="Deformazione">Deformazione</span></h4>
 <div class="mw-translate-fuzzy">
 <h4><span class="mw-headline" id="Stetching">Stetching</span></h4>
 <ul><li>Stetching X <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,00 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: diminuisce o aumenta la lunghezza dell'oggetto, di default&nbsp;: 0.</li>
@@ -397,12 +397,12 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122123246
+Cached time: 20260122123350
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.158 seconds
-Real time usage: 0.196 seconds
+CPU time usage: 0.192 seconds
+Real time usage: 0.311 seconds
 Preprocessor visited node count: 721/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
@@ -413,19 +413,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   92.875      1 -total
-  4.31%    4.003      1 Template:Code
-  4.02%    3.731      1 Template:Macro/it
-  3.83%    3.559      9 Template:CheckBox
-  3.34%    3.102      6 Template:RadioButton
-  3.02%    2.806      9 Template:SpinBox
-  2.97%    2.758      3 Template:Button
-  2.77%    2.572      1 Template:Codeextralink
-  2.12%    1.967      1 Template:TRUE
-  1.81%    1.681      1 Template:Caption
+100.00%  146.437      1 -total
+  4.06%    5.939      1 Template:Macro/it
+  3.62%    5.298      9 Template:CheckBox
+  3.27%    4.788      1 Template:Code
+  2.84%    4.155      6 Template:RadioButton
+  2.60%    3.808      9 Template:SpinBox
+  2.26%    3.304      1 Template:Codeextralink
+  1.69%    2.474      3 Template:Button
+  1.51%    2.213      1 Template:TRUE
+  1.46%    2.138      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123246 and revision id 1742357. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123350 and revision id 1742359. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
