Created page with "====Inversione===="

--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Textur (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Texture.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Texture (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Texture (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Tekstura (2% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Texture (36% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Texture/ru (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -171,11 +171,11 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Stretching X</span> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,00 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>: restringimento o ingrandimento della <b>X</b> (lunghezza) dell'oggetto (predefinito: 0)</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Stretching Y</span> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,00 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>: restringimento o ingrandimento della <b>Y</b> (altezza) dell'oggetto (predefinito: 0)</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Stretching Z</span> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,00 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>: restringimento o ingrandimento della <b>Z</b> (profondit&agrave;) dell'oggetto (predefinito: 0)</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Inversion">Inversion</span></h4>
-</div>
+<p><span id="Inversion"></span>
+</p>
+<h4><span class="mw-headline" id="Inversione">Inversione</span></h4>
 <div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Inversion_2">Inversion</span></h4>
+<h4><span class="mw-headline" id="Inversion">Inversion</span></h4>
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis X<span></span></span>&nbsp;: Inverte le coordinate <b>X</b> dell'immagine.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Y<span></span></span>&nbsp;: Inverte le coordinate <b>Y</b> dell'immagine.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Z<span></span></span>&nbsp;: Inverte le coordinate <b>Z</b> dell'immagine.</li></ul>
@@ -394,35 +394,35 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122123426
+Cached time: 20260122123433
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.176 seconds
-Real time usage: 0.230 seconds
+CPU time usage: 0.168 seconds
+Real time usage: 0.213 seconds
 Preprocessor visited node count: 738/1000000
 Post&#8208;expand include size: 17404/2097152 bytes
 Template argument size: 2869/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 19148/5000000 bytes
+Unstrip post&#8208;expand size: 19149/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   99.201      1 -total
-  5.24%    5.194      1 Template:Code
-  4.64%    4.598      1 Template:Macro/it
-  3.68%    3.650      1 Template:Codeextralink
-  3.36%    3.336      9 Template:CheckBox
-  3.36%    3.336      6 Template:RadioButton
-  2.90%    2.881      1 Template:TRUE
-  2.78%    2.757      1 Template:Caption
-  2.12%    2.099      9 Template:SpinBox
-  1.25%    1.236      6 Template:Button
+100.00%  104.946      1 -total
+  4.26%    4.472      1 Template:Macro/it
+  3.09%    3.247      9 Template:SpinBox
+  2.96%    3.104      9 Template:CheckBox
+  2.92%    3.062      6 Template:RadioButton
+  2.81%    2.945      1 Template:Code
+  2.58%    2.712      1 Template:Codeextralink
+  2.30%    2.415      1 Template:Caption
+  1.63%    1.714      1 Template:TRUE
+  1.44%    1.512      6 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123426 and revision id 1742361. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123433 and revision id 1742363. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
