--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -174,12 +174,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <p><span id="Inversion"></span>
 </p>
 <h4><span class="mw-headline" id="Inversione">Inversione</span></h4>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Inversion">Inversion</span></h4>
-<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis X<span></span></span>&nbsp;: Inverte le coordinate <b>X</b> dell'immagine.</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Y<span></span></span>&nbsp;: Inverte le coordinate <b>Y</b> dell'immagine.</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Z<span></span></span>&nbsp;: Inverte le coordinate <b>Z</b> dell'immagine.</li></ul>
-</div>
+<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis X<span></span></span>: inverte le coordinate <b>X</b> dell'immagine.</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Y<span></span></span>: inverte le coordinate <b>Y</b> dell'immagine.</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis Z<span></span></span>: inverte le coordinate <b>Z</b> dell'immagine.</li></ul>
 <p><span id="8_bit_Mode"></span>
 </p>
 <h4><span id="Modalit.C3.A0_a_8_bit"></span><span class="mw-headline" id="Modalit&agrave;_a_8_bit">Modalit&agrave; a 8 bit</span></h4>
@@ -394,13 +391,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122123433
+Cached time: 20260122123501
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.168 seconds
-Real time usage: 0.213 seconds
-Preprocessor visited node count: 738/1000000
+CPU time usage: 0.218 seconds
+Real time usage: 0.266 seconds
+Preprocessor visited node count: 734/1000000
 Post&#8208;expand include size: 17404/2097152 bytes
 Template argument size: 2869/2097152 bytes
 Highest expansion depth: 6/100
@@ -410,19 +407,19 @@ Unstrip post&#8208;expand size: 19149/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  104.946      1 -total
-  4.26%    4.472      1 Template:Macro/it
-  3.09%    3.247      9 Template:SpinBox
-  2.96%    3.104      9 Template:CheckBox
-  2.92%    3.062      6 Template:RadioButton
-  2.81%    2.945      1 Template:Code
-  2.58%    2.712      1 Template:Codeextralink
-  2.30%    2.415      1 Template:Caption
-  1.63%    1.714      1 Template:TRUE
-  1.44%    1.512      6 Template:Button
+100.00%   97.700      1 -total
+  4.30%    4.198      1 Template:Code
+  3.93%    3.835      1 Template:Macro/it
+  3.37%    3.290      1 Template:Caption
+  2.83%    2.768      1 Template:Codeextralink
+  2.71%    2.647      6 Template:RadioButton
+  2.68%    2.619      9 Template:CheckBox
+  2.31%    2.254      9 Template:SpinBox
+  1.80%    1.758      1 Template:TRUE
+  1.55%    1.518      6 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123433 and revision id 1742363. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122123501 and revision id 1742365. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
