--- a/wiki/cs/Sketcher_CreatePolyline.html
+++ b/wiki/cs/Sketcher_CreatePolyline.html
@@ -106,10 +106,10 @@ Sou&#345;adnice ukazatele jsou vedle zobrazov&aacute;ny v re&aacute;ln&eacute;m 
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_CreatePoint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Point</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_CreateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">Line</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_CreatePoint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Bod</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_CreateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">&Uacute;se&#269;ka</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-    <div><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>
+    <div><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Skic&aacute;&#345;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -148,15 +148,15 @@ Sou&#345;adnice ukazatele jsou vedle zobrazov&aacute;ny v re&aacute;ln&eacute;m 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122132448
+Cached time: 20260122132456
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.141 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.131 seconds
 Preprocessor visited node count: 382/1000000
-Post&#8208;expand include size: 26309/2097152 bytes
-Template argument size: 9381/2097152 bytes
+Post&#8208;expand include size: 26315/2097152 bytes
+Template argument size: 9385/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -164,19 +164,19 @@ Unstrip post&#8208;expand size: 2753/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.996      1 -total
- 32.49%    7.797      1 Template:Sketcher_Tools_navi/cs
- 19.24%    4.616      1 Template:Userdocnavi/cs
- 18.97%    4.551      2 Template:Navigation_menu_2
- 12.09%    2.902      1 Template:GuiCommand/cs
-  8.66%    2.077      2 Template:Docnav
-  6.56%    1.574      1 Template:Button
-  6.25%    1.500      1 Template:Caption
-  6.06%    1.455      2 Template:MenuCommand
-  4.78%    1.147      6 Template:KEY
+100.00%   24.462      1 -total
+ 32.54%    7.960      1 Template:Sketcher_Tools_navi/cs
+ 25.36%    6.204      1 Template:Userdocnavi/cs
+ 20.53%    5.022      2 Template:Navigation_menu_2
+ 13.21%    3.231      1 Template:GuiCommand/cs
+  7.90%    1.933      2 Template:Docnav
+  4.84%    1.184      6 Template:KEY
+  4.58%    1.121      1 Template:Caption
+  4.45%    1.089      1 Template:Button
+  3.67%    0.897      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122132447 and revision id 1742367. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122132455 and revision id 1742369. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
