--- a/wiki/cs/Sketcher_CreatePolyline.html
+++ b/wiki/cs/Sketcher_CreatePolyline.html
@@ -19,47 +19,45 @@
     <div><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Skic&aacute;&#345;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>Skic&aacute;&#345; Lomen&aacute; &#269;&aacute;ra
+<p>Skic&aacute;&#345; Vytvo&#345;it lomenou &#269;&aacute;ru
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Um&iacute;st&#283;n&iacute; Menu
+<th class="ctOdd">Menu location
 </th></tr>
 <tr>
-<td class="ctEven">N&aacute;&#269;rt &rarr; Skic&aacute;&#345; Konstrukce &rarr; Vytvo&#345;it Lomenou &#269;&aacute;ru
+<td class="ctEven">Skic&aacute;&#345;&rarr; Geometrie &rarr; Lomen&aacute; &#269;&aacute;ra
 </td></tr>
 <tr>
-<th class="ctOdd">Pracovn&iacute; stoly
+<th class="ctOdd">Workbenches
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Skic&aacute;&#345;</a>
+<td class="ctEven"><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Skic&aacute;&#345;</a>
 </td></tr>
 <tr>
-<th class="ctOdd">V&yacute;choz&iacute; z&aacute;stupce
+<th class="ctOdd">Default shortcut
 </th></tr>
 <tr>
-<td class="ctEven"><i>Nikdo</i>
+<td class="ctEven"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">G</span> <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">M</span>
 </td></tr>
 <tr>
-<th class="ctOdd">P&#345;edstaven ve verzi
+<th class="ctOdd">Introduced in version
 </th></tr>
 <tr>
 <td class="ctEven">-
 </td></tr>
 <tr>
-<th class="ctOdd">Viz tak&eacute;
+<th class="ctOdd">See also
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../cs/Sketcher_CreateLine.html" title="Sketcher CreateLine/cs">Skic&aacute;&#345; P&#345;&iacute;mka</a>
+<td class="ctEven"><a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">Skic&aacute;&#345; Vytvo&#345;it &uacute;se&#269;ku</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Popis">Popis</span></h2>
@@ -148,35 +146,35 @@ Sou&#345;adnice ukazatele jsou vedle zobrazov&aacute;ny v re&aacute;ln&eacute;m 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122132456
+Cached time: 20260122133247
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.131 seconds
-Preprocessor visited node count: 382/1000000
-Post&#8208;expand include size: 26315/2097152 bytes
-Template argument size: 9385/2097152 bytes
-Highest expansion depth: 6/100
-Expensive parser function count: 1/100
+CPU time usage: 0.122 seconds
+Real time usage: 0.172 seconds
+Preprocessor visited node count: 391/1000000
+Post&#8208;expand include size: 27789/2097152 bytes
+Template argument size: 10563/2097152 bytes
+Highest expansion depth: 7/100
+Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
 Unstrip post&#8208;expand size: 2753/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.462      1 -total
- 32.54%    7.960      1 Template:Sketcher_Tools_navi/cs
- 25.36%    6.204      1 Template:Userdocnavi/cs
- 20.53%    5.022      2 Template:Navigation_menu_2
- 13.21%    3.231      1 Template:GuiCommand/cs
-  7.90%    1.933      2 Template:Docnav
-  4.84%    1.184      6 Template:KEY
-  4.58%    1.121      1 Template:Caption
-  4.45%    1.089      1 Template:Button
-  3.67%    0.897      2 Template:MenuCommand
+100.00%   40.801      1 -total
+ 32.17%   13.124      1 Template:Sketcher_Tools_navi/cs
+ 17.97%    7.331      1 Template:GuiCommand
+ 17.46%    7.123      2 Template:Navigation_menu_2
+ 17.42%    7.107      1 Template:Userdocnavi/cs
+  7.91%    3.229      2 Template:Docnav
+  7.26%    2.963      1 Template:Caption
+  6.70%    2.734      1 Template:Button
+  6.16%    2.512      2 Template:MenuCommand
+  5.60%    2.283      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122132455 and revision id 1742369. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122133247 and revision id 1742371. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
