--- a/wiki/cs/Sketcher_CreatePolyline.html
+++ b/wiki/cs/Sketcher_CreatePolyline.html
@@ -9,7 +9,7 @@
 <li><a href="../pt-br/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--med" title="Polilinha (linha de m&uacute;ltiplos pontos) (20% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--med" title="Sketcher: Polilinie (20% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher CreatePolyline/sv (10% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100; &#1083;&#1080;&#1085;&#1080;&#1102; &#1087;&#1086; &#1090;&#1086;&#1095;&#1082;&#1072;&#1084; (&#1087;&#1086;&#1083;&#1080;&#1083;&#1080;&#1085;&#1080;&#1102;) (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--complete" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#12509;&#12522;&#12521;&#12452;&#12531;&#12434;&#20316;&#25104; (100% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="docnav">
@@ -61,13 +61,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Popis">Popis</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Tento n&aacute;stroj funguje podobn&#283; jako <a href="../cs/Sketcher_CreateLine.html" title="Sketcher CreateLine/cs">Skic&aacute;&#345; P&#345;&iacute;mka</a>, ale vytv&aacute;&#345;&iacute; postupn&#283; p&#345;&iacute;mkov&eacute; segmenty, kter&eacute; jsou spojeny v jejich vrcholech.
-P&#345;i spu&scaron;t&#283;n&iacute; n&aacute;stroje se ukazatel my&scaron;i zm&#283;n&iacute; na b&iacute;l&yacute; k&#345;&iacute;&#382;ek s &#269;ervenou ikonou lomen&eacute; &#269;&aacute;ry.
-Sou&#345;adnice ukazatele jsou vedle zobrazov&aacute;ny v re&aacute;ln&eacute;m &#269;ase.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_PolylineExample1.png&amp;filetimestamp=20180802080526&amp;.html" class="mw-file-description"><img src="../File/Sketcher_PolylineExample1.png" decoding="async" width="521" height="216" class="mw-file-element" data-file-width="521" data-file-height="216"></a></span>
+<p>N&aacute;stroj <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Skic&aacute;&#345; Vytvo&#345;it lomenou &#269;&aacute;ru</a> vytvo&#345;&iacute; s&eacute;rii &uacute;se&#269;ek a oblouk&#367; spojen&yacute;ch jejich koncov&yacute;mi body. N&aacute;stroj m&aacute; n&#283;kolik re&#382;im&#367;.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_PolylineExample1.png&amp;filetimestamp=20180802080526&amp;.html" class="mw-file-description"><img src="../File/Sketcher_PolylineExample1.png" decoding="async" width="521" height="216" class="mw-file-element" data-file-width="521" data-file-height="216"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Polyline started with a line, a tangent arc, a perpendicular arc then a tangent line.</p>
 <p><span id="Usage"></span>
@@ -146,35 +141,35 @@ Sou&#345;adnice ukazatele jsou vedle zobrazov&aacute;ny v re&aacute;ln&eacute;m 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122133247
+Cached time: 20260122133657
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 391/1000000
 Post&#8208;expand include size: 27789/2097152 bytes
 Template argument size: 10563/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2753/5000000 bytes
+Unstrip post&#8208;expand size: 2754/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.801      1 -total
- 32.17%   13.124      1 Template:Sketcher_Tools_navi/cs
- 17.97%    7.331      1 Template:GuiCommand
- 17.46%    7.123      2 Template:Navigation_menu_2
- 17.42%    7.107      1 Template:Userdocnavi/cs
-  7.91%    3.229      2 Template:Docnav
-  7.26%    2.963      1 Template:Caption
-  6.70%    2.734      1 Template:Button
-  6.16%    2.512      2 Template:MenuCommand
-  5.60%    2.283      8 Template:KEY
+100.00%   26.417      1 -total
+ 30.48%    8.053      1 Template:Sketcher_Tools_navi/cs
+ 20.63%    5.450      1 Template:Userdocnavi/cs
+ 19.29%    5.097      1 Template:GuiCommand
+ 18.94%    5.002      2 Template:Navigation_menu_2
+  8.33%    2.202      2 Template:Docnav
+  7.19%    1.899      8 Template:KEY
+  7.14%    1.887      1 Template:Caption
+  5.13%    1.356      1 Template:Button
+  4.57%    1.206      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122133247 and revision id 1742371. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122133656 and revision id 1742373. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
